--- a/package.json
+++ b/package.json
@@ -9,6 +9,24 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.6.1"
+    "@astrojs/tailwind": "^6.0.2",
+    "@deno/astro-adapter": "^0.3.0",
+    "@tailwindcss/vite": "^4.1.3",
+    "@typescript-eslint/parser": "^8.29.1",
+    "astro": "^5.6.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "deno": "^2.2.9",
+    "eslint": "^9.24.0",
+    "eslint-plugin-astro": "^1.3.1",
+    "lucide-react": "^0.488.0",
+    "react": "^19.1.0",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss": "^4.1.3",
+    "tw-animate-css": "^1.2.5"
+  },
+  "devDependencies": {
+    "prettier": "^3.5.3",
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
