--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "deno": "^2.2.9",
-    "eslint": "^9.24.0",
     "eslint-plugin-astro": "^1.3.1",
     "lucide-react": "^0.488.0",
     "react": "^19.1.0",
@@ -26,7 +25,13 @@
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
+    "@eslint/js": "^9.24.0",
+    "@types/react": "^19.1.1",
+    "daisyui": "^5.0.22",
+    "eslint": "^9.24.0",
+    "globals": "^16.0.0",
     "prettier": "^3.5.3",
-    "prettier-plugin-astro": "^0.14.1"
+    "prettier-plugin-astro": "^0.14.1",
+    "typescript-eslint": "^8.30.1"
   }
 }
