--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@astrojs/tailwind": "^6.0.2",
     "@deno/astro-adapter": "^0.3.0",
+    "@iconify-json/streamline": "^1.2.2",
+    "@iconify-json/streamline-emojis": "^1.2.1",
     "@tailwindcss/vite": "^4.1.3",
     "@typescript-eslint/parser": "^8.29.1",
     "astro": "^5.6.1",
@@ -26,7 +28,12 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.24.0",
+    "@iconify-json/mdi": "^1.2.3",
+    "@iconify/json": "^2.2.329",
+    "@iconify/tailwind": "^1.2.0",
+    "@iconify/tailwind4": "^1.0.6",
     "@types/react": "^19.1.1",
+    "astro-icon": "^1.1.5",
     "daisyui": "^5.0.22",
     "eslint": "^9.24.0",
     "globals": "^16.0.0",
