--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^4.2.5",
     "@astrojs/tailwind": "^6.0.2",
     "@deno/astro-adapter": "^0.3.0",
+    "@iconify-json/simple-icons": "^1.2.33",
     "@iconify-json/streamline": "^1.2.2",
     "@iconify-json/streamline-emojis": "^1.2.1",
     "@tailwindcss/vite": "^4.1.3",
