--- a/package.json
+++ b/package.json
@@ -1,31 +1,38 @@
 {
-  "name": "",
+  "name": "astro-aleraptor",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "new-post": "node scripts/add-post.js"
   },
   "dependencies": {
     "@astrojs/mdx": "^4.2.5",
+    "@astrojs/rss": "^4.0.11",
+    "@astrojs/sitemap": "^3.3.1",
     "@astrojs/tailwind": "^6.0.2",
     "@deno/astro-adapter": "^0.3.0",
     "@iconify-json/simple-icons": "^1.2.33",
     "@iconify-json/streamline": "^1.2.2",
     "@iconify-json/streamline-emojis": "^1.2.1",
+    "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.3",
     "@typescript-eslint/parser": "^8.29.1",
-    "astro": "^5.6.1",
+    "astro": "5.7.5",
+    "astro-google-analytics": "^1.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "deno": "^2.2.9",
     "eslint-plugin-astro": "^1.3.1",
     "lucide-react": "^0.488.0",
     "react": "^19.1.0",
+    "rehype-pretty-code": "^0.14.1",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
+    "theme-change": "^2.5.0",
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
@@ -42,5 +49,14 @@
     "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
     "typescript-eslint": "^8.30.1"
+  },
+  "author": {
+    "name": "Alejandro Hernández",
+    "email": "alehdezp8@gmail.com"
+  },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/alehdezp/astro-aleraptor"
   }
 }
