--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "dev": "astro dev",
     "build": "astro build",
     "astro": "astro",
-    "preview": "deno run --allow-net --allow-read --allow-env ./dist/server/entry.mjs",
+    "preview": "node dist/server/entry.mjs",
     "new-post": "node scripts/add-post.js"
   },
   "dependencies": {
     "@astrojs/mdx": "^4.2.5",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.3.1",
+    "@astrojs/vercel": "^8.1.4",
     "@deno/astro-adapter": "^0.3.0",
     "@iconify-json/simple-icons": "^1.2.33",
     "@iconify-json/streamline": "^1.2.2",
@@ -24,7 +25,6 @@
     "astro-google-analytics": "^1.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "deno": "^2.2.9",
     "eslint-plugin-astro": "^1.3.1",
     "lucide-react": "^0.488.0",
     "react": "^19.1.0",
