--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint-plugin-astro": "^1.3.1",
+    "giscus": "^1.6.0",
     "lucide-react": "^0.488.0",
     "react": "^19.1.0",
     "rehype-pretty-code": "^0.14.1",
