--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@astrojs/mdx": "^4.2.5",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.3.1",
-    "@astrojs/vercel": "^8.1.4",
+    "@astrojs/vercel": "^8.0.4",
     "@deno/astro-adapter": "^0.3.0",
     "@iconify-json/simple-icons": "^1.2.33",
     "@iconify-json/streamline": "^1.2.2",
@@ -29,6 +29,7 @@
     "giscus": "^1.6.0",
     "lucide-react": "^0.488.0",
     "react": "^19.1.0",
+    "rehype-attr": "^4.0.2",
     "rehype-pretty-code": "^0.14.1",
     "tailwind-merge": "^3.2.0",
     "theme-change": "^2.5.0",
@@ -47,6 +48,8 @@
     "globals": "^16.0.0",
     "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
+    "remark-attr": "^0.11.1",
+    "remark-attributes": "^0.3.2",
     "typescript-eslint": "^8.30.1"
   },
   "author": {
