--- a/package.json
+++ b/package.json
@@ -14,42 +14,35 @@
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.3.1",
     "@astrojs/vercel": "^8.0.4",
-    "@deno/astro-adapter": "^0.3.0",
-    "@iconify-json/simple-icons": "^1.2.33",
-    "@iconify-json/streamline": "^1.2.2",
-    "@iconify-json/streamline-emojis": "^1.2.1",
-    "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.3",
-    "@typescript-eslint/parser": "^8.29.1",
     "astro": "5.7.5",
     "astro-google-analytics": "^1.0.3",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "eslint-plugin-astro": "^1.3.1",
-    "giscus": "^1.6.0",
-    "lucide-react": "^0.488.0",
-    "react": "^19.1.0",
+    "astro-icon": "^1.1.5",
     "rehype-attr": "^4.0.2",
-    "rehype-pretty-code": "^0.14.1",
-    "tailwind-merge": "^3.2.0",
-    "theme-change": "^2.5.0",
-    "tw-animate-css": "^1.2.5"
+    "rehype-pretty-code": "^0.14.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.24.0",
     "@iconify-json/mdi": "^1.2.3",
+    "@iconify-json/simple-icons": "^1.2.33",
+    "@iconify-json/streamline": "^1.2.2",
+    "@iconify-json/streamline-emojis": "^1.2.1",
     "@iconify/json": "^2.2.329",
     "@iconify/tailwind": "^1.2.0",
     "@iconify/tailwind4": "^1.0.6",
-    "@types/react": "^19.1.1",
-    "astro-icon": "^1.1.5",
+    "@tailwindcss/typography": "^0.5.16",
+    "@typescript-eslint/parser": "^8.29.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "daisyui": "^5.0.22",
     "eslint": "^9.24.0",
+    "eslint-plugin-astro": "^1.3.1",
     "globals": "^16.0.0",
     "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
     "remark-attr": "^0.11.1",
     "remark-attributes": "^0.3.2",
+    "tailwind-merge": "^3.2.0",
     "typescript-eslint": "^8.30.1"
   },
   "optionalDependencies": {
